Created a specific ScenarioParser
This keeps the Parser generic and clean, and all specific messages are moved to this new class.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,7 @@
         "src/parser/SequenceCombinator.ts",
         "src/parser/ListCombinator.ts",
         "src/parser/Parser.ts",
+        "src/scenario/ScenarioParser.ts",
         "spec/lexer/Lexer-spec.ts",
         "spec/parser/CombinatorResult-spec.ts",
         "spec/parser/SequenceCombinator-spec.ts",
