--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,10 @@
         "outDir": "./lib",
         "preserveConstEnums": true,
         "removeComments": false,
-        "sourceMap": true
+        "sourceMap": true,
+        "noImplicitReturns": true,
+        "noFallthroughCasesInSwitch": true,
+        "pretty": true
     },
     "filesGlob": [
         "src/**/*.ts",
