--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "scripts": {
     "test": "gulp test"
   },
-  "dependencies": {},
+  "dependencies": {
+    "turf": "^3.0.11"
+  },
   "devDependencies": {
     "browserify": "^13.0.0",
     "del": "2.0.2",
