--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test": "gulp test"
   },
   "dependencies": {
+    "hypertimer": "^2.1.3",
     "turf": "^3.0.11"
   },
   "devDependencies": {
@@ -32,6 +33,7 @@
     "karma-browserify": "^5.0.1",
     "karma-chrome-launcher": "^0.2.2",
     "karma-jasmine": "^0.3.7",
+    "node-gyp": "^3.4.0",
     "watchify": "^3.7.0"
   },
   "engines": {
