--- a/spec/engine/ruleConfig.json
+++ b/spec/engine/ruleConfig.json
@@ -1,3 +1,5 @@
 {
-    "rulesFolder": "../test_data/rules"
+    "rulesFolder": "../test_data/rules",
+    "simulationStartTime": "2010-1-24",
+    "simulationRate": 1
 }
