--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,9 +4,12 @@
         "name": "Launch",
         "type": "node",
         "request": "launch",
-        "program": "${workspaceRoot}/src/scenario/UnmannedParser.ts",
+        "program": "${workspaceRoot}/src/engine/RuleEngineCli.ts",
         "stopOnEntry": false,
-        "args": [],
+        "args": [
+            "-f",
+            "${workspaceRoot}/examples/unmanned"
+        ],
         "cwd": "${workspaceRoot}",
         "runtimeExecutable": null,
         "runtimeArgs": [
@@ -15,7 +18,7 @@
         "env": {
             "NODE_ENV": "development"
         },
-        "externalConsole": true,
+        "externalConsole": false,
         "sourceMaps": true,
         "outDir": "${workspaceRoot}/lib"
     }, {
