--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test": "gulp test"
   },
   "dependencies": {
+    "command-line-usage": "^3.0.3",
     "hypertimer": "^2.1.3",
     "turf": "^3.0.11"
   },
