--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "command-line-usage": "^3.0.3",
     "hypertimer": "^2.1.3",
-    "turf": "^3.0.11"
+    "turf": "^3.0.11",
+    "winston": "^2.2.0"
   },
   "devDependencies": {
     "browserify": "^13.0.0",
